--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ python:
   - "3.4"
   - "3.5"
 install:
-  - pip install --user PIL
+  - pip install PIL
 script: cd tests && ./docbook.sh
 sudo: false
 branches:
