--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,10 @@
 language: python
 python:
-  - "3.2"
   - "3.3"
   - "3.4"
   - "3.5"
 install:
-  - pip install PIL --allow-external PIL --allow-unverified PIL
+  - pip install Pillow
 script: cd tests && ./docbook.sh
 sudo: false
 branches:
